--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     container_name: contra-dengue-nginx
     restart: unless-stopped
     ports:
-      - "8013:80"
+      - "80"
     volumes:
       - ../src:/var/www
       - ./nginx:/etc/nginx/conf.d
@@ -31,6 +31,8 @@ services:
       - contra-dengue
     networks:
       - app-network
+      - infra
+
   contra-dengue-db:
     image: postgres:latest
     container_name: contra-dengue-db
@@ -42,7 +44,7 @@ services:
     volumes:
       - contra-dengue-db-data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "127.0.0.1:5432:5432"
     networks:
       - app-network
 
@@ -57,3 +59,5 @@ volumes:
 networks:
   app-network:
     driver: bridge
+  infra:
+    external: true
