Adicionar login e visualizações de plataforma para o aplicativo ContrADengue
- Criar login.php com um plano de fundo de vídeo e um formulário para autenticação do usuário.
- Desenvolver plataforma.php para servir como painel de controle principal para gerenciamento de surtos de dengue, incluindo seções para diferentes funções e funcionalidades do usuário.
- Implementar design responsivo e elementos interativos para engajamento do usuário.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - "5432:5432"
     networks:
       - app-network
+      - infra
 
 volumes:
   contra-dengue:
@@ -57,3 +58,5 @@ volumes:
 networks:
   app-network:
     driver: bridge
+  infra:
+    external: true
