--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -21,6 +21,17 @@ server {
         log_not_found off;
     }
 
+    location /resources/ {
+        alias /var/www/resources/;
+        access_log off;
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
+    location ~* ^/resources/.*\.(php|sh|env|ini|log|bak)$ {
+        deny all;
+    }
+
     # Prevenir listagem de diretórios
     autoindex off;
 
