--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - contra-dengue
     networks:
       - app-network
+      - infra
   contra-dengue-db:
     image: postgres:latest
     container_name: contra-dengue-db
