--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
-      - .:/var/www
+      - ./src:/var/www
     networks:
       - app-network
     environment:
@@ -25,7 +25,7 @@ services:
     ports:
       - "8013:80"
     volumes:
-      - .:/var/www
+      - ./src:/var/www
       - ./config/nginx:/etc/nginx/conf.d
     depends_on:
       - contra-dengue
